fix: prevent horizontal scroll on body by setting overflow-x to hidden

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,9 @@ body {
   color: var(--primary-color);
   font-family: var(--primary-font);
   font-size: 1.2rem;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
 }
 
 .logo {
@@ -101,7 +104,7 @@ p {
   margin-bottom: 2.5rem;
   margin-top: 3rem;
   background-color: var(--highlight-color-light);
-  width: 85%;
+  width: 80%;
   margin-left: auto;
   margin-right: auto;
   padding: 0.5rem;
@@ -141,9 +144,6 @@ p {
 #clearBtn:hover {
   background-color: #e2e6ea;
 }
-
-
-
 
 /* For tablets (widths between 768px and 1024px) */
 @media (max-width: 1024px) {
